lab8server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lab8server-service
  namespace: restricted
spec:
  selector:
    app: lab8server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
