network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lab8server-policy
  namespace: restricted
spec:
  podSelector:
    matchLabels:
      app: lab8server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: sleepybox1
    - namespaceSelector:
        matchLabels:
          name: default
